--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,6 @@
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^2.12.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
@@ -18,6 +16,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.54.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
@@ -25,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "predeploy": "npm run build"
   },
@@ -34,6 +33,18 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest",
+      "^.+\\.svg$": "jest-transform-stub",
+      "^.+\\.png$": "jest-transform-stub",
+      "^.+\\.jpg$": "jest-transform-stub"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   },
   "browserslist": {
     "production": [
@@ -48,6 +59,14 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^10.6.0"
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.5.0",
+    "cypress": "^10.6.0",
+    "jest": "^27.5.1",
+    "jest-transform-stub": "^2.0.0"
   }
 }
