--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "create-react-app": "^5.0.1",
     "fs": "^0.0.1-security",
     "google-map-react": "^2.2.0",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
