--- a/client/package.json
+++ b/client/package.json
@@ -50,10 +50,12 @@
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
+    "@cfaester/enzyme-adapter-react-18": "^0.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.5.0",
     "cypress": "^10.6.0",
+    "enzyme": "^3.11.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "jest-transform-stub": "^2.0.0"
