--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "stack": "heroku-20",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
     "@react-google-maps/api": "^2.12.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
@@ -16,6 +17,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-spinners": "^0.13.8",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.54.2",
     "uuid": "^9.0.0",
