--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-spinners": "^0.13.8",
     "react-test-renderer": "^18.2.0",
@@ -55,11 +55,20 @@
     "@cfaester/enzyme-adapter-react-18": "^0.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.9",
+    "@types/react-dom": "^18.2.4",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^9.0.1",
     "babel-jest": "^29.5.0",
     "cypress": "^10.6.0",
     "enzyme": "^3.11.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
-    "jest-transform-stub": "^2.0.0"
+    "jest": "^29.5.0",
+    "jest-transform-stub": "^2.0.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^4.9.5"
   }
 }
