--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "create-react-app": "^5.0.1",
     "fs": "^0.0.1-security",
     "google-map-react": "^2.2.0",
+    "jest": "^29.5.0",
+    "jsdom": "^22.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-spinners": "^0.13.8",
@@ -65,9 +67,8 @@
     "@types/uuid": "^9.0.1",
     "babel-jest": "^29.5.0",
     "cypress": "^10.6.0",
-    "enzyme": "^3.11.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-transform-stub": "^2.0.0",
     "ts-jest": "^29.1.0",
     "typescript": "^4.9.5"
