--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-scroll": "^1.8.9",
     "react-spinners": "^0.13.8",
     "react-test-renderer": "^18.2.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.54.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
